# sturdy-waffle

trading-bot/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
trading-bot/config/: config.yaml  instruments.yaml
trading-bot/src/: __init__.py  config.py  main.py
trading-bot/src/client/: __init__.py  models.py  tradovate_client.py  ws_manager.py
trading-bot/src/orchestrator/: __init__.py  bot.py
trading-bot/src/risk/: __init__.py  engine.py  limits.py  state.py
trading-bot/src/strategy/: __init__.py  adaptive_tuning.py  engine.py  indicators.py  regime.py  session.py  signals.py  sizing.py  trailing.py  volatility.py
trading-bot/src/utils/: __init__.py  clock.py  logging.py
trading-bot/tests/: conftest.py  test_adaptive_integration.py  test_adaptive_strategy.py  test_adaptive_strategy_pt2.py  test_integration.py  test_models.py  test_orchestrator.py  test_risk_engine.py  test_strategy_engine.py  test_tradovate_client.py  test_ws_manager.py
